commit edit week 10

--- a/insertForm.html
+++ b/insertForm.html
@@ -4,7 +4,7 @@
         <title>Tambah Data</title>
     </head>
     <body>
-        <form action="insertProcess.php" method="get">
+        <form action="insertProcess.php" method="post" enctype="multipart/form-data">
             <table>
                 <tr>
                     <td> Nama: </td>
